# led_strip_cpp_code

./: CMakeLists.txt  README.md  package.xml
src/: led_effects_cpp_code.cpp  ros_code.cpp
